--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     "require": {
 
     },
+    "require-dev": {
+        "phpunit/phpunit" : "3.7.*"
+    },
     "autoload": {
-        "psr-0": { "Plop": "src" }
+        "psr-4": { "Plop\\": "src" }
     }
 }
