--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "phpunit/phpunit" : "3.7.*"
     },
     "autoload": {
-        "psr-4": { "Dumpling\\": "src" }
+        "psr-4": { "Dumpling\\": "src/" }
     }
 }
